# libs

./: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  LICENSE-0BSD.txt  README.md  amiga-gcc-toolchain.cmake  audio.h  cmdline.h  diff.h  display.h  glcontext.h  joystick.h  mutstr.h  re.h  server.h  test.h  uri.h  utf.h  x68000-gcc-toolchain.cmake
.github/workflows/: freebsd.yml  osx.yml  ubuntu.yml  windows.yml
examples/: difffilec.c  difffilecpp.cpp  diffmemc.c  diffmemcpp.cpp  displayc.c  displaycpp.cpp  glcontextc.c  glcontextcpp.cpp  gui.h  guihelloworldc.c  guihelloworldcpp.cpp  joystickc.c  joystickcpp.cpp  stopwatch.h
tools/: README.footer.md  README.header.md  README.list  make_readme.c  stb.h
